--- a/v2/manifest.json
+++ b/v2/manifest.json
@@ -1266,7 +1266,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/cvpn-v2-changelog.html",
-          "hash": "GtOczPas0ynbduKWs0wqdShpyw0aV1anb6TGQcSpL/w="
+          "hash": "P6pSFTCojuAvLsraI1jrMRUbHAk4WUirmpjcCKibLS0="
         }
       },
       "is_incremental": false,
@@ -1438,11 +1438,11 @@
     {
       "status": {
         "can_incremental": false,
-        "details": "Cannot build incrementally because last build info is missing.",
+        "details": "Disable incremental build by force rebuild option.",
         "incrementalPhase": "build",
         "total_file_count": 0,
         "skipped_file_count": 0,
-        "full_build_reason_code": "NoAvailableBuildCache"
+        "full_build_reason_code": "ForceRebuild"
       },
       "processors": {
         "ConceptualDocumentProcessor": {
